--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Etch-a-Sketch</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="styles/reset.css" rel="stylesheet">
     </head>
     <body>
         <script src="scripts/script.js"></script>
