--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Etch-a-Sketch</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="styles/reset.css" rel="stylesheet">
+        <link href="styles/styles.css" rel="stylesheet">
     </head>
     <body>
         <script src="scripts/script.js"></script>
