Changed script logic and element structure to create grid using CSS grid instead of manually setting height and width of rows and row items. Updated index.html and styles.css to work with this

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
         <link href="styles/styles.css" rel="stylesheet">
     </head>
     <body>
+        <button id="btn-reset">New Grid</button>
         <script src="scripts/script.js"></script>
     </body>
